# Native-Backend

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
header/native-backend/controller/: Controller.h
header/native-backend/db/: DataBaseRecord.h
header/native-backend/errors/: HttpStatusCode.h  errors.h
header/native-backend/packaging/: Bundle.h  JSBundle.h
header/native-backend/parsing/: RequestInformation.h  TextProcessor.h
header/native-backend/routing/: Root.h  Router.h
header/native-backend/server/: HttpVerb.h  RequestInfomration.h  Server.h  TcpConnection.h
header/native-backend/styles/: BlockViewWidgetStyle.h  BlockWidgetStyle.h  PaperWidgetStyle.h  TextWidgetStyle.h
header/native-backend/utils/: Singleton.h  Types.h  utils.h
header/native-backend/widget/: Widget.h
header/native-backend/widgets/: BlockViewWidget.h  BlockWidget.h  ContainerWidget.h  DivWidget.h  FormButton.h  FormSubmitButton.h  FormWrapperWidget.h  IWidget.h  ListViewWidget.h  PaperWidget.h  RawHtmlWidget.h  RawJSWidget.h  RawWidget.h  TextWidget.h
header/parser/: parser.h
source/native-backend/controller/: Controller.cpp
source/native-backend/db/: DataBaseRecord.cpp
source/native-backend/packaging/: Bundle.cpp
source/native-backend/parsing/: RequestInformation.cpp  TextProcessor.cpp
source/native-backend/routing/: Root.cpp  Router.cpp
source/native-backend/server/: RequestInfomration.cpp  Server.cpp  TcpConnection.cpp
source/native-backend/styles/: TextWidgetStyle.cpp
source/native-backend/widget/: Widget.cpp
source/native-backend/widgets/: BlockViewWidget.cpp  BlockWidget.cpp  ContainerWidget.cpp  FormButton.cpp  FormSubmitButton.cpp  FormWrapperWidget.cpp  IWidget.cpp  ListViewWidget.cpp  PaperWidget.cpp  RawHtmlWidget.cpp  RawJSWidget.cpp  RawWidget.cpp  TextWidget.cpp
source/parser/: parser.cpp
tests/controller/Controller/: CMakeLists.txt  tests.cpp
tests/db/DataBaseRecord/: CMakeLists.txt  tests.cpp
tests/packaging/Bundle/: CMakeLists.txt  tests.cpp
tests/parser/parser/: CMakeLists.txt  tests.cpp
tests/parsing/RequestInformation/: CMakeLists.txt  tests.cpp
tests/parsing/TextProcessor/: CMakeLists.txt  tests.cpp
tests/routing/Root/: CMakeLists.txt
tests/routing/Router/: CMakeLists.txt  tests.cpp
tests/server/RequestInformation/: CMakeLists.txt  tests.cpp
tests/server/Server/: CMakeLists.txt  tests.cpp
tests/server/TcpConnection/: CMakeLists.txt  tests.cpp
tests/server/server/: tests.cpp
tests/utils/Singleton/: CMakeLists.txt  tests.cpp
tests/widget/Widget/: CMakeLists.txt  tests.cpp
